# pokemon-data

./: .gitignore  CHANGELOG.md  CLAUDE.md  ITEM_ALL.json  ITEM_ALL.tsv  Makefile  POKEMON_ALL.json  POKEMON_ALL.tsv  README.md  create-dts.ts  create-pkmn-mapping.ts  create-pkmn.ts  extend-yakkuncom.py  find-form-mismatches.pl  format-pokeapi-allpokemons.py  index.d.ts  index.html  index.test.ts  mangle-pokeapi-allpokemons.ts  merge-items.py  merge-pokeapi-pkmn.py  merge-pokeapi-showdown.py  merge-pokeapi-yakkuncom.py  merge-pokemon-all.py  merge-tsvs.py  package-lock.json  package.json  parse-bulbapedia-items.py  parse-pokeapi-allpokemons.sh  pnpm-lock.yaml  pokeapi.allpokemons.graphql  pokeapi.allpokemons.graphql.postcontent  pokeapi.tsv  pyproject.toml  schema.ts  yakkuncom.tsv
.github/workflows/: test.yaml
assets/: index-B9Q-D83H.js  index-Cw55XFyj.js  index-D3e-xlME.js  index-DqmsYLw8.css
source/: .gitignore  README.md  pokeapi-pokedbtokyo.tsv  pokedbtokyo-item-names.json  pokedbtokyo-items.html
tests/: form-mismatch.test.ts
viewer/: index.html  package-lock.json  package.json  vite.config.ts
viewer/src/: App.tsx
